crates/regolith-syntax/src/parser.rs
//! The hand-written, event-based recursive-descent parser with Pratt
//! expressions and layout-anchored error recovery (AD-3).
//!
//! Regolith reference: `docs/spec/regolith/08`, `docs/spec/hematite/02`,
//! `docs/spec/cuprite/07`, and `examples/` (the concrete target corpus). The
//! parser emits events that a builder folds into a rowan tree; error
//! recovery syncs on INDENT/DEDENT so one bad statement never eats the
//! file (diagnostics stay batch-emitted, regolith/09 sec. 4).
//!
//! Statement grammar (WO-05): declaration bodies, `then` scopes,
//! `require` claim groups, `budget`/`waive`/`policy`/`locked` blocks
//! all share one statement-block grammar
//! ([`Parser::parse_stmt_block`]): each line is classified as a
//! `Field` (`name: value`), a `CtorStmt` (`name = value`), a
//! keyword/contextual TYPED block, or -- only for the genuinely
//! deferred residue -- an [`SyntaxKind::OpaqueIsland`]. The former
//! residual domain constructs are now typed CST nodes: `stage`/`setup`
//! (`StageStmt`/`SetupStmt`), `impl ... for ... [as ...]` (`ImplStmt`),
//! `connect`/`parts`/`zones`/`boundary`/`flows` (`*Block`), `policy`
//! rule lines (`PolicyRule`), decl-header generics (`GenericParams`),
//! and the WO-11 `walk` sub-grammar (`WalkBody`/`WalkStep` +
//! `HoleBlock`/`RegionsBlock`/`ConstraintsBlock`/`ExportsBlock`).
//! WO-28 adds the rule-pack surface (hematite/02 sec. 10, cuprite/04
//! sec. 4): a `process` decl body is parsed with a Process statement
//! context in which `capability:` and `dfm:`/`drc:`/`erc:` are typed
//! blocks, pack bodies hold `RuleDecl`s, and rule bodies promote
//! `forall`/`resolves:`/`expect:` (`ForallClause`/`ResolvesClause`/
//! `ExpectBlock`/`ExpectCase`); `demand:`/`advise:`/`per:`/`why:` are
//! ordinary `Field`s over the claim-expression grammar. The
//! block words are recognized CONTEXTUALLY at statement-start only
//! (they also occur as ordinary path segments in value position, so
//! they are NOT lexer keywords; see [`block_intro_node`]). Bracketed
//! multi-line continuations are implicitly line-joined by the layout
//! pass, so a multi-line call/interval/import argument list is one
//! logical line. A stray closing bracket at statement position is the
//! one genuine in-body malformation: [`MALFORMED_IN_BODY`] (E0193),
//! attributed to the enclosing declaration subject for INV-20
//! per-subject gating. What remains `OpaqueIsland` is only the honest
//! residue (value-tail unit products, operator-led claim
//! continuations, `override`/`plan`/`flip`; WO-05 report note).
//!
//! Value/expression grammar: a Pratt precedence-climbing parser over
//! comparisons (`< > <= >= == =`), `+ -`, `* /`, unary `-`, quantity
//! literals (adjacent `Number` + `Ident`, e.g. `5 mm`), parenthesized
//! expressions, dotted paths, calls, `[a, b]` intervals, `[i .. j]`
//! ranges, `+- N%` tolerance, `default`/`derived`/`free`/`allocated`
//! cause values, `in [...]` value sources, `within [lo, hi]` demanded
//! windows, and a `during <expr>`
//! clause usable both as a trailing claim qualifier and as a call
//! argument (`peak(x, during boundary.launch)`). Any expression shape
//! this grammar cannot classify is swept losslessly into a trailing
//! `OpaqueIsland` rather than erroring (AD-3 fuzz invariant); this
//! degrades gracefully instead of guessing at unspecified syntax.

use camino::Utf8PathBuf;
use regolith_diag::{DiagCode, Diagnostic, Family, LabeledSpan, Span};
use rowan::{Checkpoint, GreenNode, GreenNodeBuilder, Language as _};

use crate::checks;
use crate::cst::{RegolithLanguage, SyntaxNode};
use crate::layout::{apply_layout, LayoutToken};
use crate::syntax_kind::SyntaxKind;
use crate::token::lex;

/// `E01xx`: a token appeared where no statement/declaration could
/// start; recovery skips it and resyncs on the next layout token.
const UNEXPECTED_TOKEN: DiagCode = DiagCode::new(Family::Parse, 92);

/// `E0193`: a statement inside a declaration body could not start any
/// field/statement/nested block (a stray operator or punctuation token
/// at statement position). Unlike [`UNEXPECTED_TOKEN`] this error is
/// ATTRIBUTED to the enclosing declaration subject via a secondary
/// span, so per-subject check gating (INV-20) can exclude exactly that
/// subject rather than treating the whole file as unaffected.
const MALFORMED_IN_BODY: DiagCode = DiagCode::new(Family::Parse, 93);

/// The result of parsing one source file: a lossless green tree plus
/// any diagnostics. A parse ALWAYS produces a tree (error-resilient);
/// diagnostics are data, not failure (AD-7).
// frob:doc docs/modules/regolith-syntax.md#parser
#[derive(Debug, Clone)]
pub struct Parse {
    green: GreenNode,
    diagnostics: Vec<Diagnostic>,
}

impl Parse {
    /// The typed root node of the parse.
    // frob:doc docs/modules/regolith-syntax.md#parser
    #[must_use]
    pub fn syntax(&self) -> SyntaxNode {
        SyntaxNode::new_root(self.green.clone())
    }

    /// Diagnostics collected during parsing (may be non-empty even for a
    /// usable tree).
    // frob:doc docs/modules/regolith-syntax.md#parser
    #[must_use]
    pub fn diagnostics(&self) -> &[Diagnostic] {
        &self.diagnostics
    }
}

/// Parse a source string belonging to `file` into a [`Parse`].
///
/// Runs lex -> layout -> parse -> L1 static checks (`checks::run`).
/// The `file` path anchors diagnostic spans. Never panics on any input
/// (the fuzz invariant, AD-3).
// frob:doc docs/modules/regolith-syntax.md#parser
#[must_use]
pub fn parse(source: &str, file: &Utf8PathBuf) -> Parse {
    let raw = lex(source);
    let (tokens, layout_diags) = apply_layout(&raw, source);
    let mut diags: Vec<Diagnostic> = layout_diags
        .into_iter()
        .map(|d| remap_diagnostic_file(d, file))
        .collect();

    let mut p = Parser {
        toks: &tokens,
        pos: 0,
        source,
        file,
        builder: GreenNodeBuilder::new(),
        diags: Vec::new(),
        subjects: Vec::new(),
    };
    p.parse_file();
    diags.append(&mut p.diags);

    let green = p.builder.finish();
    let root = SyntaxNode::new_root(green.clone());
    diags.append(&mut checks::run(&root, file));

    Parse {
        green,
        diagnostics: diags,
    }
}

/// Rewrite every span-bearing field of `d` to point at `file`. Used for
/// diagnostics produced by the (file-agnostic) layout pass.
fn remap_diagnostic_file(mut d: Diagnostic, file: &Utf8PathBuf) -> Diagnostic {
    for s in &mut d.spans {
        s.span.file = file.clone();
    }
    for f in &mut d.fixes {
        if let Some(r) = f.replacement.as_mut() {
            r.span.file = file.clone();
        }
    }
    for r in &mut d.related {
        r.span.file = file.clone();
    }
    d
}

/// The event-emitting recursive-descent driver. Builds the rowan tree
/// directly (a `GreenNodeBuilder` folding is the same shape as the
/// event-list-then-builder split, collapsed for this bootstrap pass;
/// see the WO-05 report note on this simplification).
struct Parser<'a> {
    toks: &'a [LayoutToken],
    pos: usize,
    source: &'a str,
    file: &'a Utf8PathBuf,
    builder: GreenNodeBuilder<'static>,
    diags: Vec<Diagnostic>,
    /// Stack of enclosing declaration subjects (name + header span),
    /// pushed while parsing a declaration body. The innermost entry
    /// attributes any in-body parse error to its subject (INV-20).
    subjects: Vec<(String, Span)>,
}

/// Contextually recognized domain block-introducer words. These are
/// NOT lexer keywords: `stage`, `zones`, `boundary`, and `flows` also
/// appear as ordinary path segments in value position (`boundary.x`,
/// `milled.zones`), so promoting them to hard keywords would break path
/// parsing. They are recognized ONLY at statement-start position (see
/// [`Parser::block_intro_kind`]). Each maps to the typed node wrapping
/// its `header-line + indented stmt-block` body.
fn block_intro_node(text: &str) -> Option<SyntaxKind> {
    Some(match text {
        "stage" => SyntaxKind::StageStmt,
        "setup" => SyntaxKind::SetupStmt,
        "connect" => SyntaxKind::ConnectBlock,
        "parts" => SyntaxKind::PartsBlock,
        "zones" => SyntaxKind::ZonesBlock,
        "boundary" => SyntaxKind::BoundaryBlock,
        "flows" => SyntaxKind::FlowsBlock,
        "walk" => SyntaxKind::WalkBody,
        "regions" => SyntaxKind::RegionsBlock,
        "constraints" => SyntaxKind::ConstraintsBlock,
        "exports" => SyntaxKind::ExportsBlock,
        "hole" => SyntaxKind::HoleBlock,
        // cuprite/05 sec. 1: the computer-track boundary-demand block.
        "workloads" => SyntaxKind::WorkloadsBlock,
        _ => return None,
    })
}

/// Contextually recognized single-line ownership/region/symmetry
/// statement verbs (INV-04/05/23). Like [`block_intro_node`] these are
/// NOT lexer keywords -- `region`, `route`, `pattern` also occur as path
/// segments and field names -- so they are recognized ONLY at
/// statement-start position with an argument follower (see
/// [`Parser::line_stmt_kind`]). Each maps to the typed single-line node
/// whose leading verb token the lowering pass reads back.
fn line_stmt_node(text: &str) -> Option<SyntaxKind> {
    Some(match text {
        // Ownership: borrow / modifying feature (INV-05).
        "bind" | "modify" => SyntaxKind::OwnershipStmt,
        // Regions: owned region / route touching one (INV-23).
        "region" | "keepout" | "route" => SyntaxKind::RegionStmt,
        // Symmetry: orbit contribution / break / extension / neutral
        // mirror promotions (INV-04).
        "pattern" | "break" | "any" | "symmetric" | "mirror" | "flip" => SyntaxKind::SymmetryStmt,
        // Query resolution (INV-06/18): `feature <name>` declares a named
        // entity into the scope snapshot; `refer <name>` resolves a `.only`
        // query against it.
        "feature" | "refer" => SyntaxKind::QueryStmt,
        // cuprite/05 sec. 1a (EOPEN-15): a workload/intent ledger claim.
        // Standalone at statement-start with an `Ident` follower (an
        // intent name); also parsed nested as a `WorkloadStmt` trailing
        // clause via `parse_realizes_stmt` (the corpus shape).
        "realizes" => SyntaxKind::RealizesStmt,
        _ => return None,
    })
}

/// The subset of [`line_stmt_node`] verbs that are recognized even when
/// followed by `(` (a call-like form, `symmetric(a, b)`) rather than a
/// bare identifier argument. The others require an `Ident` follower so a
/// coincidental field (`region: x`) or ctor (`route = y`) is never
/// mis-promoted.
fn line_stmt_word_allows_paren(text: &str) -> bool {
    matches!(text, "symmetric" | "mirror" | "flip" | "break" | "any")
}

/// Top-level declaration keywords (regolith/08; WO-05 scope list).
fn is_decl_start(kind: SyntaxKind) -> bool {
    matches!(
        kind,
        SyntaxKind::PartKw
            | SyntaxKind::ProfileKw
            | SyntaxKind::InterfaceKw
            | SyntaxKind::MatingKw
            | SyntaxKind::AssemblyKw
            | SyntaxKind::SystemKw
            | SyntaxKind::BlockKw
            | SyntaxKind::ImplKw
            | SyntaxKind::ComponentKw
            | SyntaxKind::ProtocolKw
            | SyntaxKind::ComputerKw
            | SyntaxKind::ImageKw
            | SyntaxKind::BoardKw
            | SyntaxKind::TargetKw
            | SyntaxKind::DatumKw
            | SyntaxKind::EventKw
            // calcite/02 sec. 9 (WO-47, D149) is the first track to
            // hoist a `budget <name> kind=<k>:` declaration to TOP
            // level (every prior track only ever nested it inside a
            // stmt body via `parse_keyword_block`, cycle 18); the
            // shared generic decl-header + body-block grammar (the
            // same machinery every other `is_decl_start` keyword
            // already rides) covers this new nesting depth with no
            // new node kind, mirroring how `RequireKw` was hoisted to
            // decl position for fluorite's top-level `require` groups.
            | SyntaxKind::BudgetKw
    )
}

/// The classification of one statement line, decided by a
/// non-consuming lookahead scan ([`Parser::stmt_shape`]).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum StmtShape {
    /// `name: value` (or `dotted.path: value`).
    Field,
    /// `name = value` (or `dotted.path = value`).
    Ctor,
    /// `name <= value`: a non-blocking register assignment inside an
    /// `on <event>:` behavioral body (cuprite/03 sec. 1a; a ZOH delta).
    Reg,
    /// A domain-specific shape this WO defers: swallowed whole as one
    /// [`SyntaxKind::OpaqueIsland`] statement.
    Opaque,
}

/// Which body grammar an indented block parses (see
/// [`Parser::enter_body`]).
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum BodyKind {
    /// The shared statement grammar (fields, ctors, keyword blocks).
    Stmt,
    /// A `walk:` sketch body (WO-11 walk steps).
    Walk,
    /// A `workloads:` body (cuprite/05 sec. 1 `WorkloadStmt` lines).
    Workloads,
    /// A `process` decl body: the shared statement grammar plus the
    /// contextual `capability:`/`dfm:`/`drc:`/`erc:` blocks (WO-28;
    /// hematite/02 sec. 10).
    Process,
    /// A `dfm:`/`drc:`/`erc:` pack body: `rule <name>:` declarations
    /// over the shared statement grammar.
    RulePack,
    /// A `rule <name>:` body: `forall`/`resolves:`/`expect:` promoted;
    /// `demand:`/`advise:`/`per:`/`why:` stay ordinary fields.
    Rule,
    /// An `expect:` body: `pass:`/`fail:` fixture cases.
    Expect,
    /// A calcite `access:` block body (calcite/02 sec. 2, WO-47): every
    /// line is one [`SyntaxKind::EdgeStmt`] directly (no intermediate
    /// `edges:` field header, unlike a flownet's `edges:` block).
    CalciteEdges,
    /// A `test <name>:` decl body (WO-83): the shared statement grammar
    /// plus the contextual `scenario:`/`expect:` block words.
    Test,
    /// A design-test `expect:` body (WO-83): one
    /// [`SyntaxKind::TestExpectCase`] per `diagnostic`/`verdict`/
    /// `value`/`count`/`winner` line.
    TestExpect,
}

/// The context-sensitive statement words each [`BodyKind`] adds on top
/// of the shared statement grammar. Like the block words these are
/// CONTEXTUAL, never lexer keywords (cycle 18 D85): `process=` stage
/// headers, `dfm(rule)` waive targets, and `capability.x` value paths
/// all keep their plain `Ident` tokens, and a coincidental `dfm: 5`
/// field outside a process body is never promoted.
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum StmtCtx {
    /// No extra words: the shared statement grammar as before.
    Generic,
    /// `capability:` -> [`SyntaxKind::CapabilityBlock`];
    /// `dfm:`/`drc:`/`erc:` -> [`SyntaxKind::RulePackBlock`].
    Process,
    /// `rule <name>:` -> [`SyntaxKind::RuleDecl`].
    RulePack,
    /// `forall <var> in <query>` -> [`SyntaxKind::ForallClause`];
    /// `resolves: <field> from free` -> [`SyntaxKind::ResolvesClause`];
    /// `expect:` -> [`SyntaxKind::ExpectBlock`].
    Rule,
    /// `pass: <fixture>` / `fail: <fixture>` -> [`SyntaxKind::ExpectCase`].
    Expect,
    /// `scenario:` -> [`SyntaxKind::ScenarioBlock`];
    /// `expect:` -> [`SyntaxKind::TestExpectBlock`] (WO-83, inside a
    /// `test` decl body -- distinct from a rule pack's `Rule` context,
    /// so a rule's `expect:` keeps its pass/fail shape and a test's
    /// `expect:` keeps its five-form shape).
    Test,
    /// `diagnostic`/`verdict`/`value`/`count`/`winner` ->
    /// [`SyntaxKind::TestExpectCase`] (WO-83).
    TestExpect,
}

/// Whether `kind` can plausibly begin (or continue) a statement inside
/// a declaration body. Only a STRAY CLOSING bracket (`)` / `]`) at
/// statement position is treated as a genuine malformation: it can
/// neither start a statement nor continue a multi-line expression, so
/// there is no legitimate reading. Every other leading token -- names,
/// numbers, keywords, AND leading operators/`.` (which legitimately
/// continue a multi-line claim expression, swept as an opaque
/// continuation per the WO-05 report note) -- stays non-erroring, so
/// the valid corpus is diagnostic-clean. Layout tokens never reach
/// here (the block loop handles them).
fn is_plausible_stmt_start(kind: SyntaxKind) -> bool {
    !matches!(kind, SyntaxKind::RParen | SyntaxKind::RBracket)
}

/// Binding power (left, right) of a binary operator token, or `None`
/// if `kind` is not a binary operator. Comparisons bind loosest, then
/// `+ -`, then `* /` (standard precedence-climbing table).
fn bin_binding_power(kind: SyntaxKind) -> Option<(u8, u8)> {
    use SyntaxKind::{Eq, EqEqTok, Gt, GtEq, Lt, LtEq, Minus, Plus, Slash, Star};
    match kind {
        Lt | Gt | LtEq | GtEq | EqEqTok | Eq => Some((1, 2)),
        Plus | Minus => Some((3, 4)),
        Star | Slash => Some((5, 6)),
        _ => None,
    }
}

impl Parser<'_> {
    fn current(&self) -> Option<SyntaxKind> {
        self.toks.get(self.pos).map(|t| t.kind)
    }

    /// The source text of the current token (used to disambiguate the
    /// `Error` bytes `{`/`}` from any other unclassified byte -- no
    /// lexer change, structuring happens at parse time by text).
    fn current_text(&self) -> Option<&str> {
        self.toks
            .get(self.pos)
            .map(|t| &self.source[t.span.clone()])
    }

    /// The kind of the token at `idx`, skipping only `Whitespace`
    /// (used for non-consuming statement-shape lookahead).
    fn peek_significant_kind_at(&self, mut idx: usize) -> Option<SyntaxKind> {
        while matches!(
            self.toks.get(idx).map(|t| t.kind),
            Some(SyntaxKind::Whitespace)
        ) {
            idx += 1;
        }
        self.toks.get(idx).map(|t| t.kind)
    }

    /// Consume the current token into the tree; panics only if called
    /// past EOF (a parser-internal bug, never reachable from source).
    fn bump(&mut self) {
        let tok = &self.toks[self.pos];
        let text = &self.source[tok.span.clone()];
        self.builder
            .token(RegolithLanguage::kind_to_raw(tok.kind), text);
        self.pos += 1;
    }

    fn start(&mut self, kind: SyntaxKind) {
        self.builder.start_node(RegolithLanguage::kind_to_raw(kind));
    }

    fn finish(&mut self) {
        self.builder.finish_node();
    }

    fn checkpoint(&mut self) -> Checkpoint {
        self.builder.checkpoint()
    }

    /// Retroactively wrap every node/token emitted since `cp` in a new
    /// node of `kind` (the standard rowan technique for building
    /// binary-expression trees without lookahead-driven backtracking).
    fn start_node_at(&mut self, cp: Checkpoint, kind: SyntaxKind) {
        self.builder
            .start_node_at(cp, RegolithLanguage::kind_to_raw(kind));
    }

    /// Consume a run of `Whitespace` tokens (intra-line trivia).
    fn skip_ws(&mut self) {
        while self.current() == Some(SyntaxKind::Whitespace) {
            self.bump();
        }
    }

    fn skip_trivia_and_newlines(&mut self) {
        while matches!(
            self.current(),
            Some(SyntaxKind::Whitespace | SyntaxKind::Comment | SyntaxKind::Newline)
        ) {
            self.bump();
        }
    }

    fn parse_file(&mut self) {
        self.start(SyntaxKind::File);
        loop {
            self.skip_trivia_and_newlines();
            match self.current() {
                None => break,
                Some(SyntaxKind::ImportKw) => self.parse_import(),
                // A top-level `require <Group>:` claim group is the
                // fluorite decl-position form (fluorite/02 sec. 6); the
                // `require` keyword also introduces nested claim blocks
                // inside hema/cupr bodies (handled in `parse_stmt_block`).
                Some(SyntaxKind::RequireKw) => {
                    self.parse_simple_fluid_decl(SyntaxKind::RequireDecl);
                }
                Some(k) if is_decl_start(k) => self.parse_decl(),
                // The fluorite top-level declarators (`medium`, `flownet`)
                // are CONTEXTUAL idents, not lexer keywords (D85 idiom):
                // they also occur as ordinary path segments/field names.
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("medium") => {
                    self.parse_simple_fluid_decl(SyntaxKind::MediumDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("flownet") => {
                    self.parse_flownet_decl();
                }
                // The cuprite routed-run top-level declarator (D99,
                // WO-34 deliverable 1): CONTEXTUAL like `medium`/
                // `flownet` above, never a lexer keyword (`harness`
                // could otherwise occur as an ordinary path segment).
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("harness") => {
                    self.parse_harness_decl();
                }
                // The calcite (civil/architectural, WO-47) top-level
                // declarators (calcite/02, D149): CONTEXTUAL idents,
                // same idiom as `medium`/`flownet`/`harness` above.
                // Most bodies are the shared generic statement grammar
                // (`parse_simple_fluid_decl`); `structure` types its
                // `transfers:` block and `access` types its edge-line
                // body directly (see their own parse fns' doc comments).
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("site") => {
                    self.parse_simple_fluid_decl(SyntaxKind::SiteDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("grid") => {
                    self.parse_simple_fluid_decl(SyntaxKind::GridDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("level") => {
                    self.parse_simple_fluid_decl(SyntaxKind::LevelDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("space") => {
                    self.parse_simple_fluid_decl(SyntaxKind::SpaceDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("adjacent") => {
                    self.parse_simple_fluid_decl(SyntaxKind::AdjacentDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("access") => {
                    self.parse_access_decl();
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("circulation") => {
                    self.parse_simple_fluid_decl(SyntaxKind::CirculationDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("member") => {
                    self.parse_simple_fluid_decl(SyntaxKind::MemberDecl);
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("structure") => {
                    self.parse_structure_decl();
                }
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("loads") => {
                    self.parse_simple_fluid_decl(SyntaxKind::LoadsDecl);
                }
                // The cross-track design-test top-level declarator
                // (WO-83 deliverable 1; charter toolchain/37, D190):
                // CONTEXTUAL, like `process`/`medium`/`flownet` above --
                // `test` also occurs as an ordinary path segment/field
                // name (`part.test: ...`), so it is never a lexer
                // keyword. Its body gets the Test statement context so
                // `scenario:`/`expect:` are typed.
                Some(SyntaxKind::Ident) if self.leading_ident_text() == Some("test") => {
                    self.parse_test_decl();
                }
                // `assembly` is NOT dispatched to a typed decl here: it
                // is a settled cross-track HOMONYM (calcite/02 sec. 11)
                // with hematite's existing top-level `assembly <name>:`
                // system artifact, which already parses (and has
                // goldens) via the generic Ident-led decl fallback
                // below. Giving `assembly` a calcite-only typed
                // `AssemblyDecl` here would retype hematite's assemblies
                // too (same contextual-word dispatch, no per-track
                // gate) and violate the WO-31/WO-47 "zero golden churn
                // on other tracks" acceptance bar. calcite's `assembly`
                // stays an opaque [`SyntaxKind::Decl`] at this front-end
                // layer -- its `layers:`/`promises:` sub-fields already
                // parse via the shared generic body grammar regardless
                // of the outer node's kind, so nothing is lost except
                // the outer typed wrapper.
                // Any other identifier-led top-level line is a declaration
                // whose keyword this grammar does not yet model (`bind`,
                // `architecture`, ...). It is unstructured, NOT a syntax
                // error: parse it as an opaque declaration (header + body)
                // so a conforming corpus stays diagnostic-clean. Genuine
                // non-identifier garbage still falls through to recovery.
                Some(SyntaxKind::Ident) => self.parse_decl(),
                Some(_) => self.parse_error_recovery(),
            }
        }
        self.finish();
    }

    /// `import` statements: consumed as their header line, no body.
    fn parse_import(&mut self) {
        self.start(SyntaxKind::ImportStmt);
        self.consume_header_line();
        self.finish();
    }

    /// A top-level declaration: keyword + header up to `:`/newline,
    /// followed by an optional indented body parsed as a statement
    /// block (fields, ctor statements, `then`/`require`/`budget`/
    /// `waive`/`policy`/`locked`, and opaque domain statements).
    fn parse_decl(&mut self) {
        self.start(SyntaxKind::Decl);
        // A `process` declaration (hematite/04 sec. 2A) is Ident-led --
        // `process` is contextual, never a lexer keyword, because it
        // also appears as `process=<module>` in every stage header
        // (cycle 18 D85). Its body gets the Process statement context
        // so `capability:` and the rule-pack blocks are typed.
        let is_process = self.current() == Some(SyntaxKind::Ident)
            && &self.source[self.toks[self.pos].span.clone()] == "process";
        let subject = self.consume_decl_header();
        if let Some(s) = subject.clone() {
            self.subjects.push(s);
        }
        if is_process {
            self.enter_body(BodyKind::Process);
        } else {
            self.enter_body_block();
        }
        if subject.is_some() {
            self.subjects.pop();
        }
        self.finish();
    }

    /// The text of the leading (statement/decl-start) `Ident` token at
    /// `self.pos`, skipping intra-line whitespace, or `None` if the next
    /// significant token is not an `Ident`. The contextual-word lookahead
    /// for the fluorite top-level declarators (mirrors
    /// [`Parser::block_intro_kind`]'s idiom).
    fn leading_ident_text(&self) -> Option<&str> {
        let mut idx = self.pos;
        while matches!(
            self.toks.get(idx).map(|t| t.kind),
            Some(SyntaxKind::Whitespace)
        ) {
            idx += 1;
        }
        let tok = self.toks.get(idx)?;
        (tok.kind == SyntaxKind::Ident).then(|| &self.source[tok.span.clone()])
    }

    /// A fluorite declaration whose body is the shared statement block:
    /// `medium <name>: <phase>` (fluorite/02 sec. 1) and the top-level
    /// `require <Group>:` claim group (sec. 6). The header keyword (a
    /// contextual `medium` ident or the `require` keyword) and the name
    /// are lifted out by [`Parser::consume_decl_header`]; the body parses
    /// as ordinary fields/claims (INV-20 subject attribution preserved).
    fn parse_simple_fluid_decl(&mut self, node: SyntaxKind) {
        self.start(node);
        let subject = self.consume_decl_header();
        if let Some(s) = subject.clone() {
            self.subjects.push(s);
        }
        self.enter_body_block();
        if subject.is_some() {
            self.subjects.pop();
        }
        self.finish();
    }

    /// A `flownet <name>(medium=<ref>):` declaration (fluorite/02 sec. 4).
    /// The header (contextual `flownet` ident + name + `(medium=...)`
    /// config) is lifted by [`Parser::consume_decl_header`]; the body is
    /// parsed by [`Parser::parse_flownet_body`], which types the `edges:`
    /// and `states:` blocks and keeps `reference:`/`nodes:` as fields.
    fn parse_flownet_decl(&mut self) {
        self.start(SyntaxKind::FlownetDecl);
        let subject = self.consume_decl_header();
        if let Some(s) = subject.clone() {
            self.subjects.push(s);
        }
        self.parse_flownet_body();
        if subject.is_some() {
            self.subjects.pop();
        }
        self.finish();
    }
